# PiritNativeAPI

./: .gitignore  1cv8.cpp  AddInNative.cpp  AddInNative.def  AddInNative.h  AddInNative.sln  AddInNative.vcxproj  AddInNative.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  INFO.xml  MANIFEST.xml  PiritNativeAPI.cpp  PiritNativeAPI.def  PiritNativeAPI.h  README.md  build.bat  build.ps1  dllmain.cpp  pack.cmake  wsl.sh
KKTPiritLib/: CMakeLists.txt  CPiritKKT.cpp  CPiritKKT.h  PiritPacket.cpp  PiritPacket.h  ceSerial.cpp  ceSerial.h  convstring.cpp  convstring.h
TestConsole/: TestConsole.cpp
include/: 1cv8.h
pugixml/: CMakeLists.txt
